--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h1 {
 }
 /* Switch toggle (visual only) */
 #switch::before {
-    content: ";
+    content: '';
     position: absolute;
     top: 35px;
     left: 20px;
@@ -83,7 +83,7 @@ h1 {
     border-radius: 2px;
 }
 
-/* Lâmpada - Using Image */
+/* Lâmpada - SVG Container */
 #lamp {
     bottom: 180px; /* Adjusted position */
     right: 100px;
@@ -97,28 +97,15 @@ h1 {
     width: 100%;
 }
 
-.lamp-image {
+.lamp-container {
     position: relative;
     width: 100%;
     height: 100%;
 }
 
-#lamp-img {
+#lamp-svg {
     width: 100%;
-    height: auto;
-    max-height: 120px;
-    object-fit: contain;
-}
-
-/* Lamp state classes for JavaScript to toggle */
-.lamp-off {
-    opacity: 0.8;
-    filter: brightness(0.8);
-}
-
-.lamp-on {
-    opacity: 1;
-    filter: brightness(1.2) drop-shadow(0 0 10px rgba(255, 255, 0, 0.7));
+    height: 100%;
 }
 
 /* Terminais - Smaller, positioned on components */
@@ -145,7 +132,7 @@ h1 {
 #switch .terminal.phase { background-color: red; top: 10px; left: 24px; } /* Top screw */
 #switch .terminal.return { background-color: black; bottom: 10px; left: 24px; } /* Bottom screw */
 
-/* Position terminals on the lamp image */
+/* Position terminals on the lamp SVG */
 #lamp .terminal.return { background-color: black; top: 20px; left: 10px; } /* Left side of socket */
 #lamp .terminal.neutral { background-color: blue; top: 20px; right: 10px; } /* Right side of socket */
 
