--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 h1 {
     color: #333;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 /* Sistema de abas */
@@ -86,7 +87,7 @@ h1 {
     border: 2px solid transparent;
     border-radius: 5px;
     font-size: 0.9em;
-    text-align: left;
+    text-align: center;
 }
 
 .sidebar button[data-color="red"] { 
@@ -239,16 +240,15 @@ h1 {
     box-shadow: 1px 1px 3px rgba(0,0,0,0.1), inset 0 0 5px rgba(0,0,0,0.05);
     cursor: pointer;
     transition: all 0.2s ease;
+    bottom: 50px;
 }
 
 #switch-paralelo-1 {
-    top: 150px;
-    left: 100px;
+    left: 150px;
 }
 
 #switch-paralelo-2 {
-    top: 150px;
-    right: 100px;
+    right: 150px;
 }
 
 .switch-paralelo span {
@@ -256,6 +256,25 @@ h1 {
     bottom: -20px;
     left: 0;
     width: 100%;
+}
+
+/* Terminais para interruptores paralelos - alinhados verticalmente */
+.switch-paralelo .terminal.top {
+    background-color: black;
+    right: -6px;
+    top: 20px;
+}
+
+.switch-paralelo .terminal.middle {
+    background-color: black;
+    right: -6px;
+    top: 50px;
+}
+
+.switch-paralelo .terminal.bottom {
+    background-color: black;
+    right: -6px;
+    top: 80px;
 }
 
 /* Interruptor Intermediário */
@@ -288,6 +307,12 @@ h1 {
     right: 150px;
     width: 80px;
     height: 120px;
+}
+
+/* Posicionar lâmpada e quadro de distribuição na aba paralelo igual à aba simples */
+#lamp-paralelo {
+    bottom: 180px;
+    right: 150px;
 }
 
 #lamp span, #lamp-paralelo span, #lamp-intermediario span {
@@ -380,43 +405,6 @@ h1 {
     background-color: blue; 
     top: 20px; 
     right: 10px; 
-}
-
-/* Terminal Colors & Positions - Interruptor Paralelo */
-#switch-paralelo-1 .terminal.phase { 
-    background-color: red; 
-    top: 10px; 
-    left: 29px; 
-}
-
-#switch-paralelo-1 .terminal.return1 { 
-    background-color: black; 
-    bottom: 30px; 
-    left: 15px; 
-}
-
-#switch-paralelo-1 .terminal.return2 { 
-    background-color: black; 
-    bottom: 30px; 
-    right: 15px; 
-}
-
-#switch-paralelo-2 .terminal.return1 { 
-    background-color: black; 
-    top: 30px; 
-    left: 15px; 
-}
-
-#switch-paralelo-2 .terminal.return2 { 
-    background-color: black; 
-    top: 30px; 
-    right: 15px; 
-}
-
-#switch-paralelo-2 .terminal.lamp-return { 
-    background-color: black; 
-    bottom: 10px; 
-    left: 29px; 
 }
 
 /* Terminal Colors & Positions - Interruptor Intermediário */
